--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -4,6 +4,7 @@ interface TimelineItem {
 	title: string;
     company?: string;
 	description: string;
+	organization?: string;
 	tags?: string[];
 }
 
