--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,10 +1,12 @@
 ---
 interface Props {
-	href: string;
+  href: string;
+  ariaLabel?: string;
 }
 
-const { href, ariaLabel } = Astro.props;
+const { href, ariaLabel } = Astro.props as Props;
 ---
+
 
 <div
 	class="mr-3 h-10 w-24 rounded-xl bg-stone-200/50 from-orange-900 via-amber-700 to-white p-[1px] shadow-[inset_0_0_0_1px_rgba(255,255,255,0.4)] hover:bg-gradient-to-r"
