--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -15,6 +15,10 @@ const { project } = Astro.props;
 const { Content } = await project.render();
 ---
 
-<ProjectLayout frontmatter={project.data}>
+<ProjectLayout
+  title={project.data.title}
+  description={project.data.description}
+>
   <Content />
 </ProjectLayout>
+
