--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -4,7 +4,7 @@ interface Props {
   ariaLabel?: string;
 }
 
-const { href, ariaLabel } = Astro.props as Props;
+const { href } = Astro.props as Props;
 ---
 
 
